# trimsec

./: .all-contributorsrc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md  generate_md.sh
.github/workflows/: release.yml  tests.yml
assets/: demo.mov
man/man1/: trimsec.1
scripts/: test-all.sh
src/: api.rs  args.rs  errors.rs  formatting.rs  lib.rs  main.rs  time_bank.rs  youtube_utils.rs
src/cli/: args.rs  atomic.rs  flags.rs  mod.rs
src/commands/: budget.rs  fit.rs  fitcheck.rs  list.rs  mod.rs  trim.rs  yt.rs
src/core/: api.rs  config.rs  deser.rs  mod.rs  style.rs  time.rs  utils.rs  youtils.rs
src/core/api/: client.rs  mod.rs  types.rs
xtask/: Cargo.toml
xtask/src/: main.rs
