[package]
name = "trimsec"
description = "Calculate time saved on using speed multipliers."
authors = ["Anindya Shiddhartha <shiddhartha@tuta.io>"]
version = "1.0.1"
edition = "2024"
repository = "https://github.com/hitblast/trimsec"
homepage = "https://github.com/hitblast/trimsec"
license = "MIT"
readme = "README.md"
exclude = ["assets/*"]

[[bin]]
name = "ts"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4"
reqwest = { version = "0.13.4", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
